# PM_plus_experiment

./: .gitignore  crossval_SER.py  data_utils.py  pyproject.toml  test.py  train.py  train_ser.py
.trae/rules/: project_rules.md
base/: __init__.py  base_data_loader.py  base_model.py  base_trainer.py
configs/: config.yaml
dataset/: TrainDataset.py
features_extraction/: extract_features.py  features_util.py
logger/: logger.py  logger_config.yaml
model/: AlexNet.py  model.py
models/: ser_model.py
trainer/: trainer.py
utils/: __init__.py  parse_config.py  util.py
