[project]
name = "pm-plus-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nvitop==1.4.0",
    "matplotlib==3.4.2",
    "pynvml==11.0.0",
    "torchvision==0.14.0",
    "pandas==1.3.2",
    "numpy>=1.21.0",
    "imbalanced_learn==0.8.0",
    "tqdm==4.62.1",
    "torch==1.13.0",
    "fairseq==0.10.2",
    "transformers==4.10.2",
    "imblearn==0.0",
    "librosa==0.8.1",
    "Pillow>=8.4.0",
    "pysndfx==0.3.6",
    "scikit_learn==1.0",
    "openpyxl>=3.1.5",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
